[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscan"
version = "0.1.0"
description = "Forward-taint adversarial vulnerability scanner — recon helper + Claude Code skill"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-c-sharp>=0.23",
    "pyyaml>=6",
    "fastapi[standard]>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
vulnscan-recon = "vulnscan.recon:main"
vulnscan-runtest = "vulnscan.harness:main"
vulnscan-api = "vulnscan.api:serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
